Robustness in `FlowGraphTable`